# charity-django

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  pytest_use_postgresql.py  requirements.in  requirements.txt  setup.cfg
.github/workflows/: django.yml  linting.yml  python.yml
charity_django/ccew/: admin.py
charity_django/ccew/management/commands/: create_dummy_charity.py  import_ccew.py  import_mergers.py
charity_django/ccew/migrations/: 0001_initial.py  0002_alter_charity_charity_is_cdf_or_cif_and_more.py  0003_alter_charity_options.py  0004_merger.py  0005_alter_merger_transferee_regno_and_more.py  0006_alter_merger_options.py
charity_django/ccew/models/: charity.py  charity_classification.py  charity_other_names.py  charity_trustee.py
charity_django/ccew/tests/: test_charity.py
charity_django/ccni/: admin.py  apps.py  models.py
charity_django/ccni/management/commands/: import_ccni.py
charity_django/ccni/migrations/: 0001_initial.py  0002_alter_charity_options.py
charity_django/companies/: admin.py  ch_api.py  models.py
charity_django/companies/management/commands/: _company_sql.py  import_companies.py
charity_django/companies/migrations/: 0001_initial.py  0002_alter_company_options_alter_siccode_options_and_more.py  0003_remove_company_uri_alter_account_category_and_more.py  0003_remove_company_uri_alter_company_in_latest_update.py  0004_alter_account_company_alter_companysiccode_company_and_more.py  0005_alter_account_category_and_more.py
charity_django/companies/tests/: test_import_companies.py
charity_django/oscr/: admin.py  apps.py  models.py
charity_django/oscr/management/commands/: import_oscr.py
charity_django/oscr/migrations/: 0001_initial.py  0002_alter_charity_options.py
charity_django/utils/: admin.py
charity_django/utils/tests/: test_utils.py
src/: pytest_use_postgresql.py
src/charity_django/ccew/: apps.py
src/charity_django/ccew/management/commands/: create_dummy_ccew_zips.py  create_dummy_charity.py  import_ccew.py  import_mergers.py  update_aoo_lookup.py
src/charity_django/ccew/migrations/: 0001_initial.py  0002_alter_charity_charity_is_cdf_or_cif_and_more.py  0003_alter_charity_options.py  0004_merger.py  0005_alter_merger_transferee_regno_and_more.py  0006_alter_merger_options.py  0007_charityannualreturnhistory_unique_annual_return_history_and_more.py  0008_alter_charityannualreturnhistory_charity_and_more.py  0009_alter_charityannualreturnhistory_charity_and_more.py  0010_charityareaofoperationlookup.py
src/charity_django/ccew/models/: __init__.py  charity.py  charity_annual_return_history.py  charity_ar_parta.py  charity_ar_partb.py  charity_area_of_operation.py  charity_classification.py  charity_event_history.py  charity_governing_document.py  charity_other_names.py  charity_other_regulators.py  charity_policy.py  charity_published_report.py  charity_trustee.py  choices.py  merger.py
src/charity_django/ccew/tests/: test_charity.py  test_import.py
src/charity_django/ccni/: admin.py  models.py
src/charity_django/ccni/management/commands/: import_ccni.py
src/charity_django/ccni/migrations/: 0001_initial.py  0002_alter_charity_options.py  0003_alter_charity_charitable_spending_and_more.py  0004_remove_charity_retained_for_future_use_and_more.py  0005_alter_charityclassification_charity.py
src/charity_django/ccni/tests/: test_import.py
src/charity_django/ccni/tests/data/: charitydetails_test.csv
src/charity_django/companies/: admin.py  apps.py  ch_api.py  models.py
src/charity_django/companies/management/commands/: _company_sql.py  fetch_company.py  import_companies.py
src/charity_django/companies/migrations/: 0001_initial.py  0002_alter_company_options_alter_siccode_options_and_more.py  0003_remove_company_uri_alter_account_category_and_more.py  0004_alter_account_company_alter_companysiccode_company_and_more.py  0005_alter_account_category_and_more.py  0006_alter_company_companycategory.py
src/charity_django/companies/tests/: test_import_companies.py
src/charity_django/companies/tests/data/: BasicCompanyData-2020-06-01-part6_7.csv
src/charity_django/crie/: admin.py  apps.py  models.py  utils.py
src/charity_django/crie/management/commands/: import_crie.py
src/charity_django/crie/migrations/: 0001_initial.py  0002_charity_website.py  0003_alter_charity_latest_expenditure_and_more.py
src/charity_django/oscr/: admin.py  models.py
src/charity_django/oscr/management/commands/: import_oscr.py
src/charity_django/oscr/migrations/: 0001_initial.py  0002_alter_charity_options.py  0003_alter_charityclassification_charity_and_more.py
src/charity_django/postcodes/: admin.py  apps.py  codes.py  models.py
src/charity_django/postcodes/management/commands/: _base.py  create_test_nspl.py  import_chd.py  import_postcodes.py  import_rgc.py
src/charity_django/postcodes/migrations/: 0001_initial.py  0002_alter_geocode_entitycd_alter_geoentity_group.py  0003_postcode_ru21ind.py
src/charity_django/postcodes/tests/: test_import_chd.py  test_import_postcodes.py  test_import_rgc.py
src/charity_django/postcodes/tests/data/: api_chd.json  api_nspl.json  api_rgc.json  nspl_sample.csv
src/charity_django/utils/: admin.py  apps.py  cachedsession.py  charity_provider.py  models.py  text.py
src/charity_django/utils/commandlogs/: urls.py  views.py
src/charity_django/utils/management/commands/: logcommand.py
src/charity_django/utils/migrations/: 0001_initial.py  0002_alter_commandlog_options_and_more.py  0003_commandlog_notified_commandlog_updated_and_more.py
src/charity_django/utils/static/admin/css/: command_log.css
src/charity_django/utils/tests/: test_utils.py  test_utils_logcommand.py  test_utils_orgid.py  test_utils_text.py
test_project/: test_utils.py
test_project/config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
test_project/test_app/: apps.py
test_project/test_app/management/commands/: test_command_arguments.py  test_command_error.py  test_command_exception.py  test_command_success.py  test_command_tqdm.py  test_command_warning.py
