[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charity-django"
dynamic = ["version"]
description = "A set of Django apps for importing and using UK charity data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "David Kane", email = "david@dkane.net" }]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "dj_database_url",
    "Django >= 4.0",
    "faker",
    "inflect",
    "psycopg2-binary",
    "python-dateutil",
    "requests",
    "requests_cache",
    "requests_html",
    "lxml_html_clean",
    "titlecase",
    "tqdm",
    "openpyxl",
    "certifi>=2023.11.17",
]

[project.optional-dependencies]
test = [
    "ruff==0.9.3",
    "pytest>=7",
    "pytest-django",
    "pytest-pythonpath",
    "requests_mock",
    "testing.postgresql",
    "coverage",
]

[tool.hatch.envs.default]
features = ["test"]
installer = "uv"

[tool.hatch.envs.default.scripts]
serve = "python test_project/manage.py runserver {args}"
manage = "python test_project/manage.py {args}"
test = "pytest src/ {args}"
test-cov = "coverage run -m pytest src/"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
lint = ["ruff format . --check", "ruff check ."]

[tool.hatch.envs.hatch-test]
default-args = ["src/"]
features = ["test"]

[project.urls]
Homepage = "https://github.com/kanedata/charity-django"

[tool.hatch.version]
path = "src/charity_django/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/charity_django"]

[tool.ruff]
lint.ignore = ['E501']

[tool.pytest.ini_options]
addopts = " -p pytest_use_postgresql"
pythonpath = [".", "test_project"]
DJANGO_SETTINGS_MODULE = "test_project.config.settings_test"
