[metadata]
name = charity-django
version = 0.3.0
description = A set of Django apps for importing and using UK charity data
long_description = file: README.md
url = https://github.com/kanedata/charity-django
author = David Kane
author_email = david@dkane.net
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0
    inflect
    titlecase
    faker
    python-dateutil
    requests
    requests_cache
    tqdm
    requests_html
    psycopg2-binary
    dj_database_url

[options.extras_require]
test =
    pytest
    pytest-django
    pytest-pythonpath
    testing.postgresql
    black
    isort
    requests_mock